--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -91,6 +91,7 @@ main {
 
 footer {
   background: #eee;
+  margin-bottom: 310px;
   text-align: justify;
   .container {
     padding: 4rem 0;
@@ -123,7 +124,7 @@ li.page-item.disabled {
 }
 
 .yellow {
-  background: #FFEF6B;
+  background: #009591;
 }
 
 .yellow-underline {
@@ -138,53 +139,53 @@ li.page-item.disabled {
     width: 100%;
     height: 10px;
     z-index: -1;
-    background: #FFEB00;
+    background: #009591;
   }
 }
 
-.yellow-wrap {
-  border: 4px solid #000;
-  border-radius: 2rem;
-  padding: 2rem;
-  width: 80%;
-  margin: 0 auto;
-  position: relative;
-  background: #fff;
-  &::before {
-    content: '';
-    background: #FDDA00;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    border: 4px solid #000;
-    border-radius: 2rem;
-    top: 2.5rem;
-    left: 2.5rem;
-  }
-}
+// .yellow-wrap {
+//   border: 4px solid #000;
+//   border-radius: 2rem;
+//   padding: 2rem;
+//   width: 80%;
+//   margin: 0 auto;
+//   position: relative;
+//   background: #fff;
+//   &::before {
+//     content: '';
+//     background: #009591;
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+//     z-index: -1;
+//     border: 4px solid #000;
+//     border-radius: 2rem;
+//     top: 2.5rem;
+//     left: 2.5rem;
+//   }
+// }
 
-.yellow-wrap.title {
-  border: 4px solid #000;
-  border-radius: 2rem;
-  padding: 1rem;
-  width: fit-content;
-  margin: 0 auto;
-  position: relative;
-  background: #fff;
-  &::before {
-    content: '';
-    background: #FDDA00;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    border: 4px solid #000;
-    border-radius: 2rem;
-    top: 1rem;
-    left: 1rem;
-  }
-}
+// .yellow-wrap.title {
+//   border: 4px solid #000;
+//   border-radius: 2rem;
+//   padding: 1rem;
+//   width: fit-content;
+//   margin: 0 auto;
+//   position: relative;
+//   background: #fff;
+//   &::before {
+//     content: '';
+//     background: #009591;
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+//     z-index: -1;
+//     border: 4px solid #000;
+//     border-radius: 2rem;
+//     top: 1rem;
+//     left: 1rem;
+//   }
+// }
 
 .form-group label {
   margin-bottom: 5px;
