--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,5 +1,5 @@
-@import './font.scss';
-@import './table.scss';
+@import "./font.scss";
+@import "./table.scss";
 
 // html,body,#app,#admin-page {
 //   height: 100%;
@@ -18,31 +18,42 @@ input:-webkit-autofill {
   box-shadow: 0 0 0 1000px white inset;
   -webkit-box-shadow: 0 0 0 1000px white inset;
 }
-input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active { transition: background-color 5000s ease-in-out 0s; }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
 
-.custom-control-label:before, .custom-file-label, .custom-select {
-  transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+.custom-control-label:before,
+.custom-file-label,
+.custom-select {
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
 .custom-select {
   display: inline-block;
   width: 10rem;
-  height: calc(1.5em + .75rem + 2px);
-  font-size : 1rem;
+  height: calc(1.5em + 0.75rem + 2px);
+  font-size: 1rem;
   line-height: 1.5;
-  padding: .375rem 1.75rem .375rem .75rem;
-  background: #fff url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center/8px 10px;
+  padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+  background: #fff
+    url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E")
+    no-repeat right 0.75rem center/8px 10px;
   vertical-align: middle;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   -webkit-appearance: none;
   appearance: none;
 }
 
 .form-control {
-  border-radius: .25rem !important;
+  border-radius: 0.25rem !important;
 }
 
-.row, .col {
+.row,
+.col {
   margin: 0;
   padding: 0;
 }
@@ -65,15 +76,16 @@ main {
     .container {
       padding: 4rem 0;
     }
-  } 
+  }
 }
 
-.btn:focus, .page-item button:focus {
+.btn:focus,
+.page-item button:focus {
   outline: none !important;
   box-shadow: none;
 }
 .btn.disabled {
-  opacity: .3;
+  opacity: 0.3;
 }
 
 #header {
@@ -82,7 +94,7 @@ main {
   line-height: 1;
   min-width: 1536px;
   .row {
-      height: 5rem;
+    height: 5rem;
   }
   // h1 {
   //   font-family: 'SBAggroB', "NanumSquare", sans-serif;
@@ -91,7 +103,7 @@ main {
 
 #footer {
   background: #eee;
-  margin-bottom: 310px;
+  margin-bottom: 380px;
   text-align: justify;
   .container {
     padding: 4rem 0;
@@ -100,7 +112,7 @@ main {
 
 .go-button {
   width: 6rem;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   background: #009591;
   // background: #ed1651;
   color: #fff !important;
@@ -120,24 +132,24 @@ main {
   display: none;
 }
 
-button.page-link, 
+button.page-link,
 li.page-item.disabled {
-  font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .hana {
-  font-family: 'HanaM' !important;
+  font-family: "HanaM" !important;
   &.b {
-    font-family: 'HanaB' !important;
+    font-family: "HanaB" !important;
   }
   &.cm {
-    font-family: 'HanaCM' !important;
+    font-family: "HanaCM" !important;
   }
   &.l {
-    font-family: 'HanaL' !important;
+    font-family: "HanaL" !important;
   }
   &.ul {
-    font-family: 'HanaUL' !important;
+    font-family: "HanaUL" !important;
   }
 }
 
@@ -150,14 +162,14 @@ li.page-item.disabled {
   display: inline-block;
   z-index: 1;
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 10px;
     left: 0;
     width: 100%;
     height: 10px;
     z-index: -1;
-    background: #009591;
+    background: #83d9d7;
   }
 }
 
@@ -211,4 +223,6 @@ li.page-item.disabled {
   font-weight: 900;
 }
 
-.sr-only{display:none !important}
+.sr-only {
+  display: none !important;
+}
