--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -66,37 +66,50 @@ main {
 }
 
 .main-slide {
-  .VueCarousel-slide {
-    height: 30rem;
-  }
-  .VueCarousel-dot-container {
-    display: flex !important;
-    justify-content: center;
-    gap: 1rem;
-    .VueCarousel-dot {
-      font-size: 20px;
-      height: 3rem !important;
-      border-radius: 0 !important;
-      background-color: transparent !important;
-      border: 1px solid #fff !important;
-      padding: 0 !important;
-      color: #fff;
-      margin: 0 !important;
-      &.VueCarousel-dot--active {
-        background-color: #fff !important;
-        color: #000;
+  .VueCarousel {
+    border-radius: 1rem;
+    overflow: hidden;
+    .VueCarousel-slide {
+      height: 30rem;
+      > a {
+        padding: 2rem;
       }
-      &:nth-child(1)::before {
-        content: "햇살론";
-      }
-      &:nth-child(2)::before {
-        content: "사잇돌";
-      }
-      &:nth-child(3)::before {
-        content: "하나드림론";
-      }
-      &:nth-child(4)::before {
-        content: "하나슈퍼드림론";
+    }
+    .VueCarousel-pagination--bottom-overlay {
+      bottom: 1rem !important;
+      .VueCarousel-dot-container {
+        display: flex !important;
+        justify-content: center;
+        gap: 1rem;
+        margin-top: 0 !important;
+        .VueCarousel-dot {
+          font-size: 20px;
+          height: 3rem !important;
+          border-radius: 0 !important;
+          background-color: transparent !important;
+          border: 1px solid #fff !important;
+          padding: 0 !important;
+          color: #fff;
+          margin: 0 !important;
+          outline: none !important;
+          &.VueCarousel-dot--active {
+            background-color: #fff !important;
+            border: 1px solid #000 !important;
+            color: #000;
+          }
+          &:nth-child(1)::before {
+            content: "햇살론";
+          }
+          &:nth-child(2)::before {
+            content: "사잇돌";
+          }
+          &:nth-child(3)::before {
+            content: "하나드림론";
+          }
+          &:nth-child(4)::before {
+            content: "하나슈퍼드림론";
+          }
+        }
       }
     }
   }
@@ -158,6 +171,8 @@ main {
   padding: 0.5rem 0;
   background: #009591;
   color: #fff !important;
+  border-radius: 1rem;
+  margin-top: 0.5rem;
   &:hover {
     color: inherit;
   }
