--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -74,7 +74,7 @@ main {
 
 .main-slide {
   .VueCarousel {
-    border-radius: 1rem;
+    // border-radius: 1rem;
     overflow: hidden;
     .VueCarousel-slide {
       height: 45rem;
