--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,19 +1,6 @@
 @import "./font.scss";
 @import "./table.scss";
 
-// html,body,#app,#admin-page {
-//   height: 100%;
-// }
-
-// body {
-//   -ms-overflow-style: none; /* IE and Edge */
-//   scrollbar-width: none; /* Firefox */
-//   min-width: 1536px;
-// }
-// body::-webkit-scrollbar {
-//   display: none; /* Chrome, Safari, Opera*/
-// }
-
 body {
   &::-webkit-scrollbar {
     width: 10px;
@@ -80,12 +67,22 @@ input:-webkit-autofill:active {
   cursor: pointer;
 }
 
-// main {
-//   .container {
-//     color: #000;
-//     padding: 4rem 0;
-//   }
-// }
+main {
+  &.center {
+    height: 100%;
+    position: relative;
+    .container {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  // .container {
+  //   color: #000;
+  //   padding: 4rem 0;
+  // }
+}
 
 $mainColor: #009591;
 $mainColor2: #29b495;
@@ -123,56 +120,10 @@ $subColor: #ed1550;
 
 .main-slide {
   .VueCarousel {
-    // border-radius: 1rem;
-    // overflow: hidden;
-    .VueCarousel-slide {
-      // height: 45rem;
-    }
     .VueCarousel-pagination--bottom-overlay {
-      // bottom: 1rem !important;
       .VueCarousel-dot-container {
-        // display: flex !important;
-        // justify-content: center;
-        // gap: 1rem;
-        // margin-top: 0 !important;
         .VueCarousel-dot {
           outline: none;
-          // font-size: 20px;
-          // height: 3rem !important;
-          // border-radius: 0 !important;
-          // border: 1px solid #fff !important;
-          // padding: 0 !important;
-          // margin: 0 !important;
-          // outline: none !important;
-          // font-weight: 900;
-          &.VueCarousel-dot--active {
-            // background-color: #fff !important;
-            // color: black;
-            // &:nth-child(1)::before {
-            //   color: #ff9c01;
-            // }
-            // &:nth-child(2)::before {
-            //   color: #0a6e01;
-            // }
-            // &:nth-child(3)::before {
-            //   color: #31c9ee;
-            // }
-            // &:nth-child(4)::before {
-            //   color: #43b546;
-            // }
-          }
-          // &:nth-child(1)::before {
-          //   content: "햇살론";
-          // }
-          // &:nth-child(2)::before {
-          //   content: "사잇돌2";
-          // }
-          // &:nth-child(3)::before {
-          //   content: "하나드림론";
-          // }
-          // &:nth-child(4)::before {
-          //   content: "하나슈퍼드림론";
-          // }
         }
       }
     }
@@ -182,12 +133,7 @@ $subColor: #ed1550;
 #admin-page {
   // position: relative;
   main {
-    // position: absolute;
-    // width: 100%;
-    // left: 0;
-    // top: 50%;
-    // transform: translateY(-50%);
-    min-height: 75vh;
+    min-height: 78vh;
     .container {
       padding: 4rem 0;
     }
@@ -212,24 +158,6 @@ $subColor: #ed1550;
   }
 }
 
-// #footer {
-//   background: #252830;
-//   text-align: justify;
-//   .container {
-//     padding: 4rem 0;
-//   }
-//   .footer-btns {
-//     * {
-//       text-decoration: none;
-//       font-size: 20px;
-//       color: #999;
-//     }
-//   }
-//   p {
-//     color: #999;
-//   }
-// }
-
 #footer {
   .footer-btns {
     * {
@@ -243,28 +171,6 @@ $subColor: #ed1550;
     }
   }
 }
-
-// .go-button {
-//   width: 3rem;
-//   height: 3rem;
-//   color: #fff !important;
-//   margin-top: 0.5rem;
-//   &:hover {
-//     color: inherit;
-//   }
-//   &.top {
-//     background: $subColor;
-//     color: #eee !important;
-//   }
-//   &.kakao {
-//     background: #fee50e;
-//     color: #634b4b !important;
-//   }
-//   &.inquiry {
-//     background: #ec1751;
-//     color: #fff !important;
-//   }
-// }
 
 .scrollTop-btn {
   position: fixed;
@@ -343,50 +249,6 @@ li.page-item.disabled {
     background: #83d9d7;
   }
 }
-
-// .yellow-wrap {
-//   border: 4px solid #000;
-//   border-radius: 2rem;
-//   padding: 2rem;
-//   width: 80%;
-//   margin: 0 auto;
-//   position: relative;
-//   background: #fff;
-//   &::before {
-//     content: '';
-//     background: #009591;
-//     width: 100%;
-//     height: 100%;
-//     position: absolute;
-//     z-index: -1;
-//     border: 4px solid #000;
-//     border-radius: 2rem;
-//     top: 2.5rem;
-//     left: 2.5rem;
-//   }
-// }
-
-// .yellow-wrap.title {
-//   border: 4px solid #000;
-//   border-radius: 2rem;
-//   padding: 1rem;
-//   width: fit-content;
-//   margin: 0 auto;
-//   position: relative;
-//   background: #fff;
-//   &::before {
-//     content: '';
-//     background: #009591;
-//     width: 100%;
-//     height: 100%;
-//     position: absolute;
-//     z-index: -1;
-//     border: 4px solid #000;
-//     border-radius: 2rem;
-//     top: 1rem;
-//     left: 1rem;
-//   }
-// }
 
 .form-group label {
   margin-bottom: 5px;
