--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -288,6 +288,9 @@ li.page-item.disabled {
       border: none !important;
     }
   }
+  .background-none {
+    background: none !important;
+  }
 }
 
 /* Small Devices, Tablets */
